# api-hub

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routers/: books.py
app/schemas/: book.py
app/services/: google_books.py
docs/: api-hub-api.md  api-hub-implementation-plan.md  api-hub-teckstack.md  api-hub.md
tests/: test_routers.py  test_services.py
